--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,13 @@
 
 	<target name="compile" depends="init" description="compile the source ">
 		<!-- Compile the java code from ${src} into ${build} -->
-		<javac includeantruntime="no" srcdir="${src}" destdir="${build}" />
+		<javac includeantruntime="no" srcdir="${src}" destdir="${build}"
+			<classpath>
+				<pathelement path="${lib}/commons-lang-2.4.jar" />
+				<pathelement path="${lib}/junit-4.11.jar" />
+				<pathelement path="${build}" />
+			</classpath>
+		</javac>
 	</target>
 
 	<target name="dist" depends="compile" description="generate the distribution">
