--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       	<artifactId>maven-deploy-plugin</artifactId>
       	<version>2.7</version>
       </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-resources-plugin</artifactId>
+      	<version>2.4.3</version>
+      </plugin>
     </plugins>
   </build>
   <url>https://github.com/alexvetter/Commodity</url>
