--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,26 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>Commodity</groupId>
   <artifactId>Commodity</artifactId>
-  <version>0.5.0</version>
+  <version>0.6.0</version>
   <name>Commodity</name>
   <description>Some of my java utilities.</description>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <directory>${project.basedir}/target</directory>
+    <finalName>${project.artifactId}-${project.version}</finalName>
+    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+    <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+    <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/test/resources</directory>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
